# Reviews-parser

./: .env.example  .gitignore  README.md  config.py  docker-compose-back.yml  docker-compose-front.yml  docker-compose.yml  requirements.txt  runner.py
app/: __init__.py  views.py
backend/: .env  .gitignore  Dockerfile  config.py  main.py  pyproject.toml
backend/app/: __init__.py  scripts.py  utils.py  views.py
backend/app/models/: WB.py
backend/app/scripts/: scripts.py
backend/src/: __init__.py  config.py  utils.py  views.py
backend/src/classifier/: bert_classifier.py  catboost_classifier.py
backend/src/classifier/models/: count_vectorizer.pkl  stop_words.txt  tf_idf_transformer.pkl  xgboost.joblib
backend/src/models/: mirkorma.py  petshop.py  wb.py
backend/src/scripts/: mirkorma.py  parse_mirkorma.py  parse_petshop.py  parse_wb.py
bot/: Dockerfile  config.py  requirements.txt  telegram_bot.py
bot/app/: telegram_bot.py  telegram_bot_async.py  words_cloud.py
bot/app/materials/: stop_words.txt
nginx/: Dockerfile  nginx.conf
postgres/: CreateDB.sql  Dockerfile
