[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Juwume <maks.smyslov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.*"
gunicorn = "20.*"
bs4 = "*"
aiohttp = "^3.8"
asyncio = "^3.4"
fake-useragent = "^1.1"
pymongo = "^4.3"
aioflask = "^0.4"
asgiref = "^3.6"
mongoengine = "^0.25"
urllib3 = "1.26.15"
joblib = "*"
pymorphy2 = "*"
xgboost = "1.5.0"
scikit-learn = "*"
#torch = "1.13.*"
#transformers = "*"
#sentencepiece = "*"

# multidict = "*"
# flask = "*"
# gunicorn = "*"
# bs4 = "*"
# aiohttp = "*"
# asyncio = "*"
# fake-useragent = "*"
# pymongo = "*"
# aioflask = "*"
# asgiref = "*"
# mongoengine = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
